# Coacker

./: .gitignore  CLAUDE.md  config.example.toml  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  test_rbac.py
agents/: attacker.py  implement.py  intention.py  prompts.py  reviewer.py
cli/: main.py
core/: agent.py  backend.py  config.py  graph.py  pipeline.py  progress.py  state.py  task.py  task_queue.py
skills/: aptos_bft.md  grevm.md  rocksdb_sharding.md
tests/: dummy_vuln.py
tools/: bash_tools.py  mcp_bridge.py  sandbox.py  sandbox_tools.py  tree_sitter_tools.py
