[project]
name = "code-reviewer"
version = "0.1.0"
description = "AI Heuristic Code Review Agent - Multi-Agent System"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2",
    "langchain-openai>=1.1",
    "langgraph>=1.0",
    "pydantic>=2.0",
    "rich>=14.0",
    "pathspec>=1.0",
]

[project.scripts]
ai-reviewer = "cli.main:main"
