[project]
name = "code-reviewer"
version = "0.2.0"
description = "AI Heuristic Code Review Agent - Multi-Agent System with Pluggable Backend"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "rich>=14.0",
    "pathspec>=1.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=1.2",
    "langchain-openai>=1.1",
]

[project.scripts]
ai-reviewer = "cli.main:main"
